# huaweishixi

./: .gitignore  check_db2.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 98f4800150c7_init_schema.py
backend/app/: main.py  seed.py
backend/app/api/v1/: admin.py  auth.py  categories.py  devices.py  orders.py  reviews.py  upload.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/models/: __init__.py  category.py  device.py  email_code.py  order.py  review.py  user.py
backend/app/schemas/: auth.py  base.py  category.py  device.py  order.py  review.py  user.py
backend/app/services/: admin_service.py  auth_service.py  category_service.py  device_service.py  email_service.py  order_service.py  review_service.py  user_service.py
backend/app/utils/: file.py  pagination.py
backend/tests/: e2e_integration.py
backend/tests/integration/: test_auth_api.py  test_category.py  test_review.py  test_user.py
backend/tests/unit/: test_device_service.py  test_services.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/__tests__/: authStore.test.ts  format.test.ts
frontend/src/api/: admin.ts  auth.ts  category.ts  device.ts  order.ts  review.ts  user.ts
frontend/src/components/: DeviceCard.vue  ImageUpload.vue  SearchBar.vue  StatusTag.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  device.ts
frontend/src/styles/: global.css
(+14 files in other folders)
